- Update versions of dependencies, Scala and sbt - Tune JVM options for greater throughput - Add Borer benchmarks - Add weePickle benchmarks + fix uPickle name - Fix benchmarks to return results that will be consumed by JMH's blackhole - Code clean up
Code clean up